# study

./: .gitignore
SketchUp/: ANDO_Azuma house.skp  Thumbs.db  TrabalhoSketchUp_V1.doc  redo.skp
antlr/: .gitignore
arena/: aprovacao2.doe  batch.doe  model2.doe
c/: banco_dados.c  leitor_escritor.c  lelinha  lelinha.c  next_letra.c  prod_consumidor.c  prod_consumidor_busy_wait.c
c++/: InfoConstrucao.dev  InfoConstrucao.dpr  InfoConstrucao.layout  InfoConstrucao.~dp  Makefile.win  main.cpp
c/c_interpreter/: .gitignore  .texto.txt.swp  CMakeLists.txt  ci  ci.c  ci_bstree.c  ci_bstree.h  ci_btree.c  ci_btree.h  ci_utils.c  ci_utils.h  utils.c
c/calc/: CMakeLists.txt  a.out  calc.c
c/vmproj/: CMakeLists.txt
c/vmproj/src/: agilar.c  agilar.g4  agl.c  agl.h  agl_btree.c  agl_btree.h  agl_bytecode.c  agl_bytecode.h  agl_defs.h  agl_file_utils.c  agl_file_utils.h  agl_global.h  agl_lexer.c  agl_lexer.h  agl_list.c  agl_list.h  agl_module.c  agl_module.h  agl_parse_ast.c  agl_parse_ast.h  agl_parse_ast_defs.h  agl_parser.c  agl_parser.h  agl_program.c  agl_program.h  agl_scanner.c  agl_scanner.h  agl_scanner_symbol_table.c  agl_scanner_symbol_table.h  agl_source_file.c  agl_source_file.h  agl_symbol_table.c  agl_symbol_table.h  agl_token.c  agl_token.h  agl_vm.c  agl_vm.h  btree.c  file_utils.c  file_utils.h  (+23 more)
c/vmproj/src/parser/: agl_lexer.c  agl_lexer.h  agl_parser.c  agl_parser.h  agl_symbol_table.c  agl_symbol_table.h  agl_token.c  agl_token.h
c/vmproj/src/test/: agenda.agilar  test.c  test1.agilar  test2.agilar
c/vmproj/src/utils/: agl_btree.c  agl_btree.h  agl_file_utils.c  agl_file_utils.h
c/vmproj/src/vm/: agl_vm.c  agl_vm.h  agl_vm_types.h
c/vmproj/test/: test1.agilar
erlang/: afile_client.erl  afile_server.erl  cliente.erl  estudo.erl  estudo2.erl  estudo3.erl  funcoes.erl  hello.erl  lib_misc.erl  matematica.erl  miniserver.erl  server referencia.erl  servidor.erl  tarde1.erl  tipos.hrl  world.erl
flex/: wc.l
haskell/: Expression.hs  FuncoesAltaOrdem.hs  Main.hs  Tree.hs  aula2.hs  aula4.erl  aula4.hi  aula4.hs  aula5.hs  dog.erl  estudo3.hs  exercicios_livro_haskell_cap01_everton.hs  funcoes.hs  lista1.hs  manha1.hs  manha2.hs  noite1.hs  noite2.hs  noite4.hs  prova.hs  usando map e filter.txt
jvm/: ClassInitializationDemo.java  GCDemo.java  HelloWorld.java  ReflectionDemo.java  helloworld.java  reflection.java
k8s/: README.md  nodeport-service.yaml
lee/: .gitignore  CMakeLists.txt  README.md
lee/samples/: agenda.lee  agenda.utils.lee  sample1.lee  sample2.lee  sample3.lee  sample4.lee  sample5.lee  sample_1.lee  sample_2.lee
lee/src/: lee.c  lee_btree.h  lee_defs.h  lee_file_utils.c  lee_global.h  lee_hash_table.c  lee_hash_table.h  lee_lang.g4  lee_lexer.c  lee_lexer.h  lee_list.c  lee_list.h  lee_messages.c  lee_messages.h  lee_module.c  lee_module.h  lee_parse_ast.c  lee_parse_ast.h  lee_parse_ast_defs.h  lee_program.c  lee_program.h  lee_scanner.c  lee_scanner.h  lee_scanner_symbol_table.h  lee_source_file.c  lee_source_file.h  lee_symbol_table.c  lee_symbol_table.h  lee_token.c  lee_token.h  lee_vm.c  lee_vm.h
lee/src/samples/: agenda.contatos.lee  agenda.lee  agenda.utils.lee  sample_1.lee
lee/src/test/: agenda.lee  collection_test.c  collection_test.h  gera_vm_opcodes_test.c  gera_vm_opcodes_test.h  test.c  test1.agilar
lee/src/utils/: lee_array_list.c  lee_array_list.h  lee_binary_tree.c  lee_binary_tree.h  lee_btree.c  lee_btree.h  lee_file_utils.h  lee_fileutils.c  lee_hash_table.c  lee_hash_table.h  lee_linked_list.c  lee_linked_list.h  lee_strutils.c  lee_strutils.h
maple/: exercicios.mws  exercicios2.mws
nasm/: a.out  app1  app1.asm  argcount  argcount.c  asm1  asm1.asm  asm2  asm2.nasm  asm3.asm  asm3_x32  asm3_x64  asm3x32  asm3x64  asm4  asm4.asm  constructor_in_c  constructor_in_c.asm  constructor_in_c.c  func_com_soma  func_com_soma.asm  functions.asm  hello  hello.asm  hello.lst  hello2.asm  hello2.lst  hello3  hello4.asm  hello4.lst  helloworld  helloworld.asm  helloworld.c  helloworld_clang  learg  learg.asm  libpadrao.asm  mostra_mensagem  mostra_mensagem.asm  mostra_mensagem.c  (+20 more)
nginx/: README.md  nginx.conf
node/: animal.js  arvore.js  familia.js  package-lock.json  package.json  pessoa.js
pascal/: EXERC02.PAS  EXERC14.PAS  EXERC15.PAS  (+15 more)
(+1454 files in other folders)
