cmake_minimum_required(VERSION 3.22)
project(lee)
set(CMAKE_C_STANDARD 23)

FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(GLIB REQUIRED glib-2.0)

INCLUDE_DIRECTORIES(
        src/include/
        ${GLIB_INCLUDE_DIRS}
)

LINK_DIRECTORIES(${GLIB_LIBRARY_DIRS})

FILE(GLOB SRC_C src/*.c)
FILE(GLOB SRC_H src/*.h)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${SRC_H} ${SRC_C} src/lee_hash_table.c src/lee_hash_table.h)

TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${GLIB_LIBRARIES})
