cmake_minimum_required(VERSION 3.22)
project(vmproj)
set(CMAKE_C_STANDARD 23)

FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(GLIB REQUIRED glib-2.0)

INCLUDE_DIRECTORIES(
        src/include/
        ${GLIB_INCLUDE_DIRS}
)

LINK_DIRECTORIES(${GLIB_LIBRARY_DIRS})

FILE(GLOB SRC src/*.c)
FILE(GLOB SRC_PARSER src/parser/*.c)
FILE(GLOB SRC_UTILS src/utils/*.c)
FILE(GLOB SRC_VM src/vm/*.c)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${SRC} ${SRC_PARSER} ${SRC_UTILS} ${SRC_VM} src/agl.c src/agl.h)

TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${GLIB_LIBRARIES})
